--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,233 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* nav */
+.navbar{
+  background-color: #2c3e50;
+  font-size: 25px !important;
+  color: white !important;
+  text-align: center;
+  font-weight: bolder;
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+  transition: padding-top 0.3s, padding-bottom 0.3s !important;
+
+}
+.navbar.active{
+  background-color: #2c3e50 !important;
+
+padding-top: 0.5rem !important;
+padding-bottom: 0.5rem !important;
+
+
+}
+.navbar-brand{
+  color: #fff!important;
+  font-size: 30px !important;
+
+
+}
+.nav-link{
+  color: #fff!important;
+  margin: 7px;
+
+}
+.nav-link:hover{
+  color: #1abc9c!important;
+
+
+}
+.nav-link.active {
+  color: #fff;
+  background: #1abc9c;
+  border-radius: 4px;
+  padding: 10px;
+}
+.nav-link.active:hover {
+  color: #fff !important;
+  background: #1abc9c;
+  border-radius: 4px;
+  padding: 10px;
+}
+.btn-social {
+  border-radius: 30px !important;
+  display: flex;
+  width: 3.25rem;
+  height: 3.25rem;
+  padding-top: 10px !important;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem !important;
+}
+/* contact */
+/* button.close {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+}
+
+.close {
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.5;
+} */
+/* por */
+
+.item{
+  cursor: pointer;
+  margin-top: 5%;
+}
+.item img{
+  border-radius: 4px;
+
+}
+.box{
+  background-color: white;
+  top:3%;
+bottom: 0;
+/* margin-bottom: 5%; */
+left: 0%;
+right: 0%;
+/* width: 100%; */
+/* height: 120%; */
+z-index: 999999;
+position: fixed;
+/* position: absolute; */
+padding-bottom: 2%;
+border-radius: 4px;
+overflow: hidden;
+
+
+}
+#lightbox-cont{
+background-color: rgba(0,0,0,.5);
+top:0%;
+bottom: 0;
+left: 0;
+right: 0;
+z-index: 999999;
+position: fixed;
+display: flex;
+justify-content: center;
+align-items: center;
+overflow: hidden;
+
+}
+#light-item {
+  height:900px;
+  width: 650px;
+  background-image: url(cabin.png);
+  background-repeat: no-repeat;
+  background-size:cover;
+border-radius: 4px;
+text-align: center;
+margin-left: 20%;
+overflow: hidden;
+
+
+}
+
+
+#light-item i{
+  font-size: 18px;
+  margin: 5px;
+  cursor: pointer;
+
+}
+i{
+  cursor: pointer;
+}
+.title1{
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  padding: 10px 0;
+color: #2c3e50;
+}
+#close{
+  font-size: 50px;
+  color: #1abc9c;
+}
+.btn-primary{
+  color: #fff;
+  background-color: #1abc9c !important;
+  border-color: #1abc9c !important;
+}
+/* footer */
+footer{
+  background-color: #2c3e50;
+  color: #fff;
+}
+footer h1{
+  color: #fff;
+font-size: 30px;
+}
+footer p{
+  font-weight: 400 !important;
+
+}
+.copyright{
+  background-color: #1a252f;
+  font-weight: 200;
+  font-size: 18px;
+}
+/* contact */
+.form-floating {
+  position: relative !important;
+  border-bottom: 1px solid #e9ecef !important;
+  /* font-size: 1.5em; */
+  color: #1abc9c !important;
+
+
+}
+
+.form-floating input, .form-floating textarea {
+  font-size: 1.5em;
+  position: relative;
+  resize: none;
+  border: none;
+  border-radius: 0;
+  background: none;
+  box-shadow: none !important;
+ 
+}
+.invalid-feedback{
+ font-size: 35px;
+ font-weight: bolder;
+ text-align: center;
+}
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 0.125rem solid transparent;
+  border-radius: 0.5rem;
+}
+/* button.close2 {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+}
+
+.close2 {
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.5;
+} */
+/* ,,,,,,,,,,, */
